# extcpp

./: CMakeLists.txt  LICENSE  README.md
include/extcpp/: safequeue.hpp
test/: CMakeLists.txt  test_safequeue.cpp
